--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "await-to-js": "^3.0.0",
+    "axios": "^1.6.7",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^4.9.0",
