--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "await-to-js": "^3.0.0",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^4.9.0",
@@ -30,6 +32,7 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
+    "@types/qs": "^6.9.11",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
